data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4095.wast
;; 4. **Test: Call to Missing Function in Function Table**    - Description: Define a function table where one function index points to an undefined or `nil` entry. Use `call_indirect` to attempt calling this missing function. Expect an `unreachable` instruction execution.    - Constraint: Invalid function reference results in a trap.    - Unreachable Execution: Attempting to call `nil` should trap into `unreachable`.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (result i32)
      (call_indirect (type 0) (i32.const 1))
    )
  )
  "unreachable"
)